--- a/about.html
+++ b/about.html
@@ -9,13 +9,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
-        <meta author="MINDLUNNY">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/public/static/style.css" type="text/css">
-         <!--****************Bootstrap****************-->
+        <!--****************Bootstrap****************-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
-        <title>INTRODUCTION-YOUR-CHAMPION</title>
     </head>
     <body class="custom-background">
         <!--[if lt IE 7]>
@@ -36,41 +34,34 @@
                 </div>
             </div>
         </nav>
-        <div class="container d-flex justify-content-center align-items-center p-3">
-            <div class="terminal">
-                <pre id="output"></pre>
-            </div>
-        </div>
-        <div class="row justify-content-center p-4">
-            <div class="col-sm-3">
-                <div class="container p-2">
-                    <div class="card border-0">
-                        <div class="card-body bg-black text-center">
-                            <a href="https://www.youtube.com/@berrycode3200" class="btn btn-primary bg-black border-0" target="_blank">
-                                <h5 class="card-title">Video</h5>
-                            </a>
-                        </div>
+        <div id="carouselExampleFade" class="carousel slide p-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-block w-100">
+                        <h3 id="q01">Who Am I?</h3>
+                        <p class="container" id="paragraph_aboutMe">
+                            Testing about me. Lorem...
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100">
+                        <h3 id="q02">How was this site made?</h3>
+                        <p class="container" id="paragraph_aboutMe_02">
+                            ...
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="container p-2">
-                    <div class="card border-0">
-                        <div class="card-body bg-black text-center">
-                            <a href="https://github.com/PineberryCode" class="btn btn-primary bg-black border-0" target="_blank">
-                                <h5 class="card-title">Code</h5>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <script src="/config/terminal.js" async defer></script>
+        <script src="" async defer></script>
     </body>
-    <!--***** https: ... /donate *****--> 
-    <!--*** ─────▄█▀█▄──▄███▄────❤ ***-->
-    <!--*** ────▐█░██████████▌──── ***-->
-    <!--*** ─────██▒█████████───── ***-->
-    <!--*** ──────▀████████▀────── ***-->
-    <!--*** ─────────▀██▀───────── ***-->
 </html>
