--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="container p-2">
                     <div class="card border-0">
                         <div class="card-body bg-black text-center">
-                            <a href="https://www.youtube.com/@berrycode3200" class="btn btn-primary bg-black border-0" target="_blank">
+                            <a href="https://www.youtube.com/" class="btn btn-primary bg-black border-0" target="_blank">
                                 <h5 class="card-title">Video</h5>
                             </a>
                         </div>
