--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta author="MINDLUNNY">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/public/static/style.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
          <!--****************Bootstrap****************-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <script src="/config/terminal.js" async defer></script>
+        <script src="terminal.js" async defer></script>
     </body>
     <!--***** https: ... /donate *****--> 
     <!--*** ─────▄█▀█▄──▄███▄────❤ ***-->
