--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
         <title>INTRODUCTION-YOUR-CHAMPION</title>
     </head>
-    <body class="custom-background">
+    <body class="custom-background" id="init">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark fixed-top" id="navPartial">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">MINDLUNNY</a>
+                <a class="navbar-brand" href="#init">MINDLUNNY</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
+                            <a class="nav-link" href="#carouselExampleFade">About</a>
                         </li>
                     </ul>
                 </div>
@@ -64,6 +64,34 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="carouselExampleFade" class="carousel slide p-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-block w-100">
+                        <h3 id="q01">Who Am I?</h3>
+                        <p class="container" id="paragraph_aboutMe">
+                            Testing about me. Lorem...
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100">
+                        <h3 id="q02">How was this site made?</h3>
+                        <p class="container" id="paragraph_aboutMe_02">
+                            ...
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
         <script src="terminal.js" async defer></script>
     </body>
