--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <model-viewer
-        src="../static/burger.glb"
+        src="burger.glb"
         alt="Descripción del modelo"
         camera-controls
         auto-rotate
